--- a/PokerApp1/Base.lproj/Main.storyboard
+++ b/PokerApp1/Base.lproj/Main.storyboard
@@ -174,8 +174,25 @@
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ofN-HH-cze">
+                                                        <rect key="frame" x="40" y="54" width="334" height="18"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nb5-2x-SbZ">
+                                                                <rect key="frame" x="0.0" y="0.0" width="162" height="18"/>
+                                                                <fontDescription key="fontDescription" type="italicSystem" pointSize="15"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mWv-RN-HVy">
+                                                                <rect key="frame" x="172" y="0.0" width="162" height="18"/>
+                                                                <fontDescription key="fontDescription" type="italicSystem" pointSize="15"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                    </stackView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BfJ-6W-1s0">
-                                                        <rect key="frame" x="15" y="54" width="384" height="20.5"/>
+                                                        <rect key="frame" x="15" y="87" width="384" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -183,12 +200,16 @@
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <constraints>
+                                                    <constraint firstItem="ofN-HH-cze" firstAttribute="top" secondItem="kpY-o2-LIg" secondAttribute="bottom" constant="15" id="7hv-DZ-3mW"/>
                                                     <constraint firstAttribute="trailing" secondItem="BfJ-6W-1s0" secondAttribute="trailing" constant="15" id="A3v-82-mQQ"/>
+                                                    <constraint firstItem="ofN-HH-cze" firstAttribute="centerX" secondItem="Uzt-2I-poC" secondAttribute="centerX" id="GrU-qh-yeN"/>
                                                     <constraint firstAttribute="trailing" secondItem="kpY-o2-LIg" secondAttribute="trailing" constant="30" id="Kdn-O9-mvA"/>
+                                                    <constraint firstItem="BfJ-6W-1s0" firstAttribute="top" secondItem="ofN-HH-cze" secondAttribute="bottom" constant="15" id="Um7-Hr-T7r"/>
                                                     <constraint firstItem="kpY-o2-LIg" firstAttribute="top" secondItem="Uzt-2I-poC" secondAttribute="top" constant="15" id="dFg-Mn-hAv"/>
-                                                    <constraint firstItem="BfJ-6W-1s0" firstAttribute="top" secondItem="kpY-o2-LIg" secondAttribute="bottom" constant="15" id="flx-k0-tXr"/>
                                                     <constraint firstItem="kpY-o2-LIg" firstAttribute="leading" secondItem="Uzt-2I-poC" secondAttribute="leading" constant="30" id="jYW-55-Uxf"/>
                                                     <constraint firstItem="BfJ-6W-1s0" firstAttribute="leading" secondItem="Uzt-2I-poC" secondAttribute="leading" constant="15" id="ncL-ci-mdj"/>
+                                                    <constraint firstAttribute="trailing" secondItem="ofN-HH-cze" secondAttribute="trailing" constant="40" id="vqL-PR-jkx"/>
+                                                    <constraint firstItem="ofN-HH-cze" firstAttribute="leading" secondItem="Uzt-2I-poC" secondAttribute="leading" constant="40" id="vqj-WK-tlE"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
@@ -207,6 +228,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="MLs-dw-b3Y" secondAttribute="trailing" id="AMM-pw-6Ig"/>
+                            <constraint firstItem="Uzt-2I-poC" firstAttribute="bottom" secondItem="uar-cr-qvw" secondAttribute="bottom" id="UYv-MN-Lpq"/>
                             <constraint firstItem="MLs-dw-b3Y" firstAttribute="leading" secondItem="rIf-D7-9GU" secondAttribute="leading" id="eL4-Yb-AMb"/>
                             <constraint firstItem="MLs-dw-b3Y" firstAttribute="top" secondItem="rIf-D7-9GU" secondAttribute="top" id="hwQ-oN-lCM"/>
                             <constraint firstAttribute="bottom" secondItem="MLs-dw-b3Y" secondAttribute="bottom" id="p9I-TS-Ogt"/>
@@ -216,7 +238,9 @@
                     <connections>
                         <outlet property="backButton" destination="poS-RO-YTg" id="tDV-Ne-JUS"/>
                         <outlet property="infoView" destination="Uzt-2I-poC" id="2xb-GZ-BEB"/>
+                        <outlet property="newsAuthorLabel" destination="mWv-RN-HVy" id="qJx-SY-ucp"/>
                         <outlet property="newsBodyLabel" destination="BfJ-6W-1s0" id="oU7-uN-mze"/>
+                        <outlet property="newsDateLabel" destination="Nb5-2x-SbZ" id="QlB-XH-4Jy"/>
                         <outlet property="newsImageView" destination="1j6-v9-hEE" id="5od-UQ-K53"/>
                         <outlet property="newsTitleLabel" destination="kpY-o2-LIg" id="7Oo-Bn-HxC"/>
                     </connections>
@@ -368,17 +392,23 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ODb-gA-iVc" userLabel="infoView">
                                                 <rect key="frame" x="0.0" y="225" width="414" height="671"/>
                                                 <subviews>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="wBe-c9-1Yy">
-                                                        <rect key="frame" x="30" y="15" width="354" height="59.5"/>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="wBe-c9-1Yy">
+                                                        <rect key="frame" x="30" y="15" width="354" height="92.5"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Wp-ec-sJi">
-                                                                <rect key="frame" x="0.0" y="0.0" width="354" height="24"/>
+                                                                <rect key="frame" x="152" y="0.0" width="50.5" height="24"/>
                                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MjJ-QH-J2t">
+                                                                <rect key="frame" x="158.5" y="39" width="37" height="18"/>
+                                                                <fontDescription key="fontDescription" type="italicSystem" pointSize="15"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ku-pM-L00">
-                                                                <rect key="frame" x="0.0" y="39" width="354" height="20.5"/>
+                                                                <rect key="frame" x="156" y="72" width="42" height="20.5"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -419,6 +449,7 @@
                         <viewLayoutGuide key="safeArea" id="s2n-MH-hUO"/>
                     </view>
                     <connections>
+                        <outlet property="articleAuthorLabel" destination="MjJ-QH-J2t" id="Ooo-uP-EKt"/>
                         <outlet property="articleBodyLabel" destination="9ku-pM-L00" id="6nG-zD-I4W"/>
                         <outlet property="articleImageView" destination="0NE-rh-hHb" id="UDI-Qt-46v"/>
                         <outlet property="articleTitleLabel" destination="5Wp-ec-sJi" id="0Kb-Vd-Vua"/>
